# VirtualMemoryManager

./: .gitignore  CMakeLists.txt  threads.c  vm.c  vm.ilk
components/: disk.c  disk.h  initialize.c  initialize.h  pages.c  pages.h  threads.c  utilities.c  utilities.h
components/threads/: diskThread.c  diskThread.h  trimThread.c  trimThread.h  userThread.c  userThread.h
